# OauthDemo

./: Dockerfile  app.py  docker-compose.yaml  entrypoint.sh  main.py  pyproject.toml
config/: mock_config.py  providers.py
core/: deps.py  router.py
core/v1/: code_to_access.py  qq_auth.py  service_auth.py
model/: mock_model.py  qq_models.py
model/mocker/: mock_model.py
service/: mock_token_service.py  mock_user_service.py  qq_oauth_service.py
service/mocker/: mock_token_service.py  mock_user_service.py
